2007-07-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c:
   Ignore whitespace_chars for Haxe.
 * src/plugins.c:
   Use a single PluginData struct for all plugins.


2007-07-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * THANKS, data/filetype_extensions.conf, data/filetypes.haxe,
   tagmanager/haxe.c, tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/Makefile.am, src/templates.c, src/highlighting.c,
   src/highlighting.h, src/callbacks.c, src/filetypes.c,
   src/filetypes.h, src/symbols.c:
   Add filetype Haxe (patch by blackdog, thank you).
 * ChangeLog, po/ChangeLog, README: Change format of email addresses.


2007-07-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * po/POTFILES.in:
   Translate the HTML Characters plugin.
 * src/main.c:
   Set app->debug_mode when GEANY_DEBUG is defined.
 * plugins/htmlchars.c, src/plugindata.h, src/plugins.c:
   Don't destroy plugin_fields->menu_item automatically - plugin_fields
   should be owned by the plugin, so the plugin is responsible for
   destroying it, and any other memory it allocated.
   Print a warning message in debug mode if a plugin has no cleanup()
   function.


2007-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix wrong selection handling when using Color Chooser.


2007-07-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c:
   Apply patch from Jeff Pohlmeyer to add plugin functions for getting
   a file list and modifying scintilla text selections (thanks).
 * src/document.c:
   Fix hang when replacing all '[ ]*' regex matches (closes #1757748).


2007-07-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am, doc/Makefile.am, icons/Makefile.am, plugins/Makefile.am,
   scintilla/include/Makefile.am, src/Makefile.am:
   Fix make distcheck.


2007-07-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
